<resources>
    <string name="app_name">subur</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_article">Article</string>
    <string name="title_community">Community</string>
    <string name="title_riceplantdetector">Rice Plant Detect</string>
    <string name="title_profile">Profile</string>
    <string name="hello_rice_plan_fragment">Rice Plan</string>
    <string name="hello_profile_fragment">Profile</string>
    <string name="hello_homepage_fragment">Homepage</string>
    <string name="hello_community_fragment">Community\n</string>
    <string name="hello_article_fragment">Article</string>
    <string name="article_image">Article Image</string>
    <string name="artikel">Artikel</string>
    <string name="cari_artikel">Cari Artikel</string>
    <string name="beranda">Beranda</string>
    <string name="terbaru">Terbaru</string>
    <string name="artikel_untuk_anda">Artikel Untuk Anda</string>
    <string name="artikel_terkini">Artikel Terkini</string>
    <string name="title_image_preview">Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="predict">Predict :</string>
    <string name="komunitas">Komunitas</string>
    <string name="cari_topik">Cari Topik</string>
    <string name="tambah_topik_baru">Tambah Topik Baru</string>
    <string name="topik_populer">Topik Populer</string>
    <string name="topik_trending">Topik Trending</string>

    <string name="bot">Tanya AI</string>
    <string name="topik_terkini">topik terkini\n</string>
</resources>