<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.subur.features.homepage.view.HomepageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_homepage" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.bangkit.subur.features.article.view.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.bangkit.subur.features.community.view.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_riceplantdetector"
        android:name="com.bangkit.subur.features.riceplantdetector.view.RicePlantDetectorFragment"
        android:label="@string/title_riceplantdetector"
        tools:layout="@layout/fragment_rice_plant_detector" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.subur.features.profile.view.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>