<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/title_image_preview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:elevation="4dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/green"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:textAlignment="center"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:elevation="2dp"/>

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/green"
        android:layout_marginHorizontal="32dp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btnSelectFromGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_from_gallery"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/green"
        android:layout_marginHorizontal="32dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnTakePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>